--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
-{
-  "name": "video-app-fullstack",
-  "version": "1.0.0",
-  "description": "Backend of VIDEO STREAMING APP",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "dev": "nodemon src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "javascript",
-    "backend"
-  ],
-  "author": "atul chauhan",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^3.1.4",
-    "prettier": "^3.3.3"
+  {
+    "name": "video-app-fullstack",
+    "version": "1.0.0",
+    "description": "Backend of VIDEO STREAMING APP",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+      "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js",
+      "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [
+      "javascript",
+      "backend"
+    ],
+    "author": "atul chauhan",
+    "license": "ISC",
+    "devDependencies": {
+      "nodemon": "^3.1.4",
+      "prettier": "^3.3.3"
+    },
+    "dependencies": {
+      "dotenv": "^16.4.5",
+      "express": "^4.19.2",
+      "mongoose": "^8.5.4"
+    }
   }
-}
